--- a/BPMN/README
+++ b/BPMN/README
@@ -1,1 +1,7 @@
 
+Jeisson Steven Rincón Mellizo   20152020087
+Carlos Santiago Rojas Moreno    20152020095
+David Acero
+
+En esta carpeta se encuentran los documentos correspondientes a los modelos BPMN de innovacion 
+de un producto cualquiersea y de un producto de software.
